[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/debug/debug_combat.gd" id="1"]

[node name="Debug_Combat" type="Node3D"]
script = ExtResource("1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 10, 0)

[node name="Ground" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(20, 0, 0, 0, 1, 0, 0, 0, 20, 0, -0.5, 0)

[node name="DebugUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="DebugUI"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 250.0
offset_bottom = 200.0

[node name="SpawnEnemyButton" type="Button" parent="DebugUI/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Spawn Enemy"

[node name="DamagePlayerButton" type="Button" parent="DebugUI/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Damage Player (10)"

[node name="AddUpgradeButton" type="Button" parent="DebugUI/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Give Piercing Rounds"

[node name="HealthLabel" type="Label" parent="DebugUI/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Player Health: -/-"

[node name="EnemyCountLabel" type="Label" parent="DebugUI/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Enemies: 0"
